aded moveing grey square

--- a/index.html
+++ b/index.html
@@ -13,12 +13,8 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body class = body>
-    <div class = "controls">
-    <p id = "number-1">0</p>
-    <button id = "sign">+</button>
-    <p id = "number-2">0</p>
+    <div id="bg">
     </div>
-
         <script src="script.js" async defer></script>
     </body>
 
